syntax="proto3";

package greet;
option go_package="greetpb";
message Greeting {
 string first_name = 1;
 string last_name =2;
}

message GreetRequest {
  Greeting greeting =1;
}
message GreetManyTimeRequest {
 Greeting greeting =1;
}
message GreetResponse {
 string result = 1;
}
message GreetManyTimeResponse {
 string result = 1;

}
message LongGreetRequest {
  Greeting greeting =1;
}

message LongGreetResponse {
  string result = 1;
}
message GreetEveryOneRequest{
  Greeting greeting =1;
}
message GreetEveryOneResponse{
string result = 1;
}


service GreetService{
  //Unary Request
  rpc Greet(GreetRequest) returns (GreetResponse){};
  //Stream Server
  rpc GreetManyTime(GreetManyTimeRequest) returns (stream GreetManyTimeResponse) {}
  //Stream Client
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {}
  //Bi directional streaming
  rpc GreetEveryOne(stream GreetEveryOneRequest) returns (stream GreetEveryOneResponse) {}
}
